# palace-client-utils

./: README.md  parse_rwpm_audio_manifest.py  pyproject.toml
.github/actions/poetry/: action.yml
.github/workflows/: lint.yml  mypy.yml
client_utils/: constants.py
client_utils/cli/: download_lcp_manifest.py  palace_terminal.py  patron_bookshelf.py  summarize_rwpm_audio_manifest.py  validate_manifests.py
client_utils/models/api/: authentication_document.py  opds2.py  patron_profile.py  readium_lcp_license_v1.py  rwpm_audiobook.py  util.py
client_utils/models/interaction/audiobook/: audio_segment.py  audiobook.py
client_utils/models/internal/: bookshelf.py
client_utils/models/internal/rwpm_audio/: audio_segment.py  audiobook.py
client_utils/roles/: patron.py
client_utils/services/: registry.py
client_utils/utils/: datetime.py  iteration.py  misc.py
client_utils/utils/http/: async_client.py  auth_token.py  streaming.py
docs/: AUDIO_MANIFEST.md
src/palace_tools/: constants.py
src/palace_tools/cli/: download_feed.py  download_lcp_manifest.py  fetch_lcp.py  palace_terminal.py  palace_terminal.tcss  patron_bookshelf.py  summarize_rwpm_audio_manifest.py  validate_manifests.py
src/palace_tools/feeds/: axis.py  opds.py  opds1.py  overdrive.py
src/palace_tools/models/api/: authentication_document.py  opds2.py  patron_profile.py  readium_lcp_license_v1.py  rwpm_audiobook.py
src/palace_tools/models/internal/: bookshelf.py
src/palace_tools/models/internal/rwpm_audio/: audio_segment.py  audiobook.py
src/palace_tools/roles/: patron.py
src/palace_tools/services/: registry.py
src/palace_tools/utils/: typer.py
src/palace_tools/utils/http/: async_client.py  auth_token.py  streaming.py
