[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
files = ["."]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "Palace Client Utilities"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "palace-client-utils"
readme = "README.md"
version = "0"

[tool.poetry.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.1"
pydantic = "^2.6.1"
python = ">=3.10,<4"
typer = "^0.9.0"
typing_extensions = {version = "^4.9.0", python = "<3.11"}

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
