[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["."]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "vlc",
]

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "Palace Client Utilities"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "palace-client-utils"
packages = [{include = "client_utils"}]
readme = "README.md"
version = "0"

[tool.poetry.dependencies]
httpx = "^0.27.0"
mutagen = "^1.47.0"
pydantic = "^2.6.1"
python = ">=3.10,<4"
python-vlc = "^3.0.20123"
pytz = "^2024.1"
rich = "^13.7.1"
textual = "^0.52.1"
typer = "^0.9.0"
typing_extensions = {version = "^4.9.0", python = "<3.11"}

[tool.poetry.group.ci.dependencies]
pre-commit = "^3.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-pytz = "^2024.1.0.20240203"

[tool.poetry.scripts]
audiobook-manifest-summary = "client_utils.cli.summarize_rwpm_audio_manifest:main"
fetch-lcp-audiobook-manifest = "client_utils.cli.download_lcp_manifest:main"
palace-terminal = "client_utils.cli.palace_terminal:main"
patron-bookshelf = "client_utils.cli.patron_bookshelf:main"
validate-audiobook-manifests = "client_utils.cli.validate_manifests:main"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
