[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "vlc",
]

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "Palace Tools"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "palace-tools"
packages = [{include = "palace_tools", from = "src"}]
readme = "README.md"
version = "0"

[tool.poetry.dependencies]
httpx = "^0.27.0"
mutagen = "^1.47.0"
pydantic = "^2.6.1"
python = ">=3.10,<4"
python-vlc = "^3.0.20123"
pytz = "^2024.1"
rich = "^13.7.1"
textual = "^0.52.1"
typer = "^0.9.0"
typing_extensions = {version = "^4.9.0", python = "<3.11"}

[tool.poetry.group.ci.dependencies]
pre-commit = "^3.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-pytz = "^2024.1.0.20240203"

[tool.poetry.scripts]
audiobook-manifest-summary = "palace_tools.cli.summarize_rwpm_audio_manifest:main"
fetch-lcp = "palace_tools.cli.fetch_lcp:main"
palace-terminal = "palace_tools.cli.palace_terminal:main"
patron-bookshelf = "palace_tools.cli.patron_bookshelf:main"
validate-audiobook-manifests = "palace_tools.cli.validate_manifests:main"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
